--- a/seek for love/index.html
+++ b/seek for love/index.html
@@ -15,7 +15,7 @@
 		<img src="images/seek_for_love_03.png" alt="" class="seek_love_flag">
 		<img src="images/seekfove.png" alt="" class="seek_love">
 		<img src="images/seeklovebed.png" alt="" class="uniq_font">
-		<a href="Javascrpipt:void(0);"><div class="one_key_chat">一键约聊</div></a>
+		<a href="www.baidu.com"><div class="one_key_chat">一键约聊</div></a>
 	</div>
 	<script type="text/javascript" src='js/jquery-3.1.1.js'></script>
 	<script type="text/javascript" src="js/index.js"></script>
